# ska

./: README.md
caesar/apps/: CMakeLists.txt
caesar/apps/bkgfinder/: main.cc
caesar/apps/fits2root/: main.cc
caesar/apps/readimg/: main.cc
caesar/apps/root2fits/: main.cc
caesar/apps/saliencyfinder/: main.cc
caesar/apps/skymodelConvolver/: main.cc
caesar/apps/sourceCatalogsCorrelator/: main.cc
caesar/apps/sourceResidualFinder/: main.cc
caesar/apps/sourcefinder/: main.cc
caesar/apps/sourcefinderMPI/: CMakeLists.txt  Run.sh  SourceFinderMPI.cc  SourceFinderMPI.h  main.cc
caesar/server/: CMakeLists.txt
caesar/server/broker/: CMakeLists.txt  Makefile  SFinderBroker.cpp  SFinderBroker.h  SFinderBroker.xmi  SFinderBrokerClass.cpp  SFinderBrokerClass.h  SFinderBrokerStateMachine.cpp  WorkerSourceDataCallBack.cpp  WorkerStateCallBack.cpp
caesar/server/utils/: CMakeLists.txt  Serializer.cc  Serializer.h  Source.proto  WorkerData.cc  WorkerData.h  WorkerManager.cc  WorkerManager.h  WorkerTask.cc  WorkerTask.h
caesar/server/worker/: CMakeLists.txt  Makefile  SFinder.cpp  SFinder.h  SFinder.xmi  SFinderClass.cpp  SFinderClass.h  SFinderStateMachine.cpp  SFinderThread.cpp  SFinderThread.h
caesar/src/: CMakeLists.txt
caesar/src/img/: CMakeLists.txt  Image.cc  Image.h  Img.cc  Img.h  ImgMetaData.h
caesar/src/imgfilt/: CMakeLists.txt  GausFilter.cc  GradientFilter.cc  GradientFilter.h  KirschFilter.cc  KirschFilter.h  LoGFilter.cc  LoGFilter.h  MorphFilter.cc  MorphFilter.h  SaliencyFilter.cc  SaliencyFilter.h  WTFilter.cc  WTFilter.h
caesar/src/imgio/: CMakeLists.txt  FITSReader.cc  FITSReader.h  FITSWriter.cc  FITSWriter.h
caesar/src/imgproc/: BkgData.cc  BkgData.h  BkgFinder.cc  BkgFinder.h  Blob.cc  Blob.h  BlobFinder.cc  BlobFinder.h  CMakeLists.txt  ChanVeseSegmenter.cc  ChanVeseSegmenter.h  Contour.cc  Contour.h  LRACSegmenter.cc  Pixel.cc  Pixel.h  Region.cc  Region.h  (+16 more)
(+130 files in other folders)
