
add_subdirectory(utils)
add_subdirectory(worker)

set (SRCS ${SRCS} PARENT_SCOPE)
set (HEADERS ${HEADERS} PARENT_SCOPE)
set (HEADERS_WPATH ${HEADERS_WPATH} PARENT_SCOPE)
set (DICT_SRCS ${DICT_SRCS} PARENT_SCOPE)
set (DICT_HEADERS ${DICT_HEADERS} PARENT_SCOPE)
set (INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)


# SFINDER SERVER
set (SFINDER_SERVER_SRCS ${SFINDER_SERVER_SRCS} PARENT_SCOPE)
set (SFINDER_SERVER_HEADERS ${SFINDER_SERVER_HEADERS} PARENT_SCOPE)
set (SFINDER_SERVER_HEADERS_WPATH ${SFINDER_SERVER_HEADERS_WPATH} PARENT_SCOPE)
set (Main_SFINDER_SERVER_SRCS ${Main_SFINDER_SERVER_SRCS} PARENT_SCOPE)

